--- a/main.css
+++ b/main.css
@@ -50,7 +50,7 @@ input#submit_button:hover {
 }
 
 pre {
-    background-color: gainsboro;
+    background-color: #E6E6E6;
     width: 100%;
     font-size: 3vw;
 }
@@ -79,4 +79,9 @@ pre#pre2 {
 .back:hover {
     transition: all .3s;
     background-color: #75A5E3;
+}
+
+.result {
+    font-size: 7vw;
+    color: red;
 }
